# ECommercePlatform

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.txt  linux_build.txt  vcpkg.json  win_build.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: tests.yml
common/: CMakeLists.txt
common/dto/: CMakeLists.txt
common/dto/include/: DbMapping.hpp  JsonHelpers.hpp  Order.hpp  OrderCreatedEvent.hpp  OrderItem.hpp  Product.hpp  ProductAttribute.hpp  ProductPrice.hpp  User.hpp  UserCredentials.hpp  UserProfile.hpp
common/dto/src/: OrderCreatedEvent.cpp
common/http/: CMakeLists.txt
common/http/include/: HttpCommon.hpp  HttpError.hpp  HttpErrorMapping.hpp  HttpHelpers.hpp  HttpNet.hpp  HttpServerConfig.hpp  HttpTypes.hpp  IController.hpp  Listener.hpp  PathParamType.hpp  PathParamTypeRegistry.hpp  RequestContext.hpp  RouteDSL.hpp  RouteMatch.hpp  RouteTrie.hpp  Router.hpp  Session.hpp  TypedParams.hpp
common/http/src/: HttpHelpers.cpp  Listener.cpp  RequestContext.cpp  RouteTrie.cpp  Router.cpp  Session.cpp
common/parser/: CMakeLists.txt
common/parser/include/: TypedParams.hpp  ValueParser.hpp
docker/: docker-compose.yml  example.env  infra.sh  pg_dump.sh
docker/pgadmin/: servers.json
services/: CMakeLists.txt
services/CreateOrdersClientService/: CMakeLists.txt  main.cpp
services/CreateOrdersClientService/include/: OrdersClient.hpp
services/CreateOrdersClientService/src/: OrdersClient.cpp
services/CreateOrdersService/: CMakeLists.txt  main.cpp
services/CreateOrdersService/include/: CreateOrdersService.hpp  OrdersController.hpp
services/CreateOrdersService/src/: CreateOrdersService.cpp  OrdersController.cpp
services/OrderService/: CMakeLists.txt  main.cpp
services/OrderService/src/: OrderService.cpp
services/ProcessOrdersService/: CMakeLists.txt  main.cpp
services/ProcessOrdersService/src/: ProcessOrdersService.cpp
tests/: CMakeLists.txt
tests/controllers/: order_controller_api_test.py
tests/integration/: CMakeLists.txt  HttpRoutingLoadIntegrationTest.cpp  HttpServerBehaviorIntegrationTest.cpp  HttpServerLoadIntegrationTest.cpp  RouteParsingIntegrationTest.cpp
tests/unit/: CMakeLists.txt
tests/unit/parser/: CMakeLists.txt  PathParamTypeTest.cpp  TypedParamsTest.cpp  ValueParserTest.cpp
tests/unit/routing/: CMakeLists.txt  RouteTrieTest.cpp  RouterTest.cpp
